--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -40,6 +40,12 @@
             },
             "diskRequest": {
                 "Title": "Sol·licitar disc"
+            },
+            "requests": {
+                "Title": "Comandes"
+            },
+            "requestsList": {
+                "Title": "Comandes realitzades"
             }
         }
     },
