--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -256,7 +256,8 @@
                     }
                 },
                 "item": {
-                    "DeliveryDate": "Entrega prevista per al"
+                    "DeliveryDate": "Entrega prevista per al",
+                    "DeliveryAddress": "L'adreça on es realitzarà l'entrega és"
                 }
             }
         }
