Items on collapse

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -270,6 +270,9 @@
                                 "processing": "Comanda en procés",
                                 "sent": "Comanda en repartiment"
                             }
+                        },
+                        "request": {
+                            "Title": "Material sol·licitat"
                         }
                     }
                 },
