--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -56,7 +56,8 @@
                 "Description": "Ens agradaria conèixer com avalues la teva experiencia amb la nostra web. Fes-nos arribar els teus comentaris!",
                 "form": {
                     "Opinion": "Opinió",
-                    "Submit": "Enviar opinió"
+                    "Submit": "Enviar opinió",
+                    "Success": "S'ha enviat la teva opinió"
                 },
                 "close": {
                     "DoShowAgain": "Vols que deixem de preguntar per la teva opinió?"
