Nicely set opinions

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -51,6 +51,7 @@
     },
     "view": {
         "opinions": {
+            "Title": "Opinions de la comunitat",
             "notification": {
                 "Title": "Dóna'ns la teva opinió",
                 "Description": "Ens agradaria conèixer com avalues la teva experiencia amb la nostra web. Fes-nos arribar els teus comentaris!",
