--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -1,7 +1,8 @@
 {
     "languages": {
         "ca": "Català",
-        "es": "Espanyol"
+        "es": "Espanyol",
+        "en": "Anglés"
     },
     "actions": {
         "GoHome": "Torna a la pàgina principal"
