Basic image cropping

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -85,7 +85,7 @@
                     "Title": "Els nostres professionals",
                     "list": {
                         "joel-campos": {
-                            "Description": "Descripció de mi mismo ns"
+                            "Description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur auctor urna ac libero pretium, id sagittis augue aliquam. Mauris pulvinar viverra ligula at pellentesque."
                         }
                     }
                 }
