--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -81,6 +81,9 @@
                 }
             },
             "sections": {
+                "weOffer": {
+                    "Title": "Què oferim?"
+                },
                 "professionals": {
                     "Title": "Els nostres professionals",
                     "list": {
