--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -485,5 +485,8 @@
         "empty": {
             "Description": "No hi han dades"
         }
+    },
+    "share": {
+        "Title": "Comparteix la web"
     }
 }
