Added content on share

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -487,6 +487,7 @@
         }
     },
     "share": {
-        "Title": "Comparteix la web"
+        "Title": "Comparteix la web",
+        "Text": "Fes arribar la nostra web a tots els teus contactes!"
     }
 }
