Some footer fix

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -491,6 +491,7 @@
         "Text": "Fes arribar la nostra web a tots els teus contactes!"
     },
     "footer": {
-        "Privacy": "Polítiques de privacitat"
+        "Privacy": "Polítiques de privacitat",
+        "Share": "Compartir"
     }
 }
