Basic route and menu

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -47,6 +47,9 @@
             },
             "requestsList": {
                 "Title": "Comandes realitzades"
+            },
+            "contactForm": {
+                "Title": "Formulari de contacte"
             }
         }
     },
