--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -81,6 +81,9 @@
                     "recover": {
                         "Title": "Segur que vols recuperar l'element?"
                     }
+                },
+                "filters": {
+                    "ShowDeleted": "Veure esborrats"
                 }
             }
         },
