Drawer view info

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -84,6 +84,11 @@
                 },
                 "filters": {
                     "ShowDeleted": "Veure esborrats"
+                },
+                "viewItem": {
+                    "Email": "Email",
+                    "Name": "Nom",
+                    "Message": "Missatge"
                 }
             }
         },
